Fix styles with posts on mobile devices

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -12,8 +12,10 @@ $drak_color: #404040;
     flex: 1;
     align-self: center;
     flex-direction: column;
-    margin: 10px;
-    padding: 10px;
+    @media (min-width: 720px){
+        margin: 10px;
+        padding: 10px;
+    }
     height: 100%;
     max-width: 100%;
     @media (min-width: 1080px){
